test/data/semantic-errors/type-mismatches-in-assigment.gs
Num y = 12
y = false